tests/NormalTests/paczka1/fuzzy1/49716599.err
Error in line 7: AUjWPm A909 48,51
Error in line 8: S505 S505 91,2
Error in line 21: 6W0ZL S526 58,2
Error in line 23: 6W0ZL A909 41,7
Error in line 26: beJiXaxsud A909 W6,7
